# object-safe

./: Cargo.toml  README.md  check
src/: lib.rs  obj.rs
