[package]
name = "object-safe"
version = "0.3.0"
edition = "2021"
description = "Implement object-unsafe traits for trait objects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dnut/object-safe"
readme = "README.md"
keywords = ["trait", "object", "safe", "type", "dyn"]
categories = ["data-structures", "rust-patterns"]
